      not in the selected 8-bit character set (most often Latin-1) and
      the \R session is using a UTF-8 locale, the warning messages will
      show the UTF-8 character rather than its bytes and one dot will be
      substituted per character rather than per byte.  (Platforms whose
      \code{iconv()} does transliteration silently plot the
      transliteration.)

      In a UTF-8 locale some transliterations are now done without
      warning (e.g., dashes and Unicode minus to hyphen, ligatures are
      expanded).

      \item The matrix multiplication functions \code{crossprod()} and
      \code{tcrossprod()} are now also primitive and S3 generic, as
      \code{\%*\%} had become in \R 4.3.0.

      \item \code{source()} and \code{example()} have a new optional
      argument \code{catch.aborts} which allows continued evaluation of
      the \R code after an error.

      \item The non-Quartz \code{tiff()} devices allow additional types
      of compression if supported by the platform's \samp{libtiff} library.

      \item The list of base and recommended package names is now provided by
      \code{tools :: standard_package_names}.

      \item \code{cairo_pdf()} and \code{cairo_ps()} default to
      \code{onefile = TRUE} to closer match \code{pdf()} and
      \code{postscript()}.

      \item New option \code{catch.script.errors} provides a documented way
      to catch errors and continue in non-interactive use.

      \item \code{L \%||\% R} newly in base is an expressive idiom for the
      \code{if(!is.null(L)) L else R} or \code{if(is.null(L)) R else L}
      phrases.

      \item \code{warnings()} now always inherits from \code{"warnings"} as
      documented, newly also in the case of no warnings, where it
      previously returned \code{NULL}.

      \item \code{as.complex("1i")} now returns \code{1i} instead of
      \code{NA} with a warning.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{